--- a/views/company.ejs
+++ b/views/company.ejs
@@ -1,5 +1,5 @@
 <div class="company">
-	<section class="section white-black section-short landing-page">
+	<section class="section blue section-short landing-page">
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
@@ -10,7 +10,7 @@
 		</div>
 	</section>
 	<article>
-		<section class="section black-white section-short has-top">
+		<section class="section white section-short has-top">
 			<div class="decor-top">
 				<% include top-triangle-angle %>
 			</div>
@@ -38,7 +38,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section white-black section-short landing-page">
+		<section class="section grey section-short landing-page">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
@@ -48,7 +48,7 @@
 				</header>
 			</div>
 		</section>
-		<section class="section white-black has-top">
+		<section class="section white has-top">
 			<section  id="cd-google-map">
 				<div id="google-container"></div>
 				<div id="cd-zoom-in"></div>
