--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -9,8 +9,8 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="https://twitter.com/RoadmunkApp" title="Twitter">
-						Twitter
+					<a href="/company" title="Twitter">
+						About
 					</a>
 				</li>
 				<li class="nav-item">
@@ -69,12 +69,12 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" title="Facebook">
-						Facebook
+					<a href="https://plus.google.com/b/107625452876036263182/+Roadmunkgoogleplus/" title="Facebook">
+						Google&#43;
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" title="Linked In">
+					<a href="http://www.linkedin.com/company/roadmunk" title="Linked In">
 						Linked In
 					</a>
 				</li>
