--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,13 +1,20 @@
-<section class="section white-black section-short landing-page">
+<section class="section blue section-short landing-page">
 	<div class="background-media"></div>
 	<div class="background-overlay"></div>
 	<div class="container">
-		<header class="section-header text-center underline">
-			<h1 class="headline text-large hairline">Create Beautiful Roadmaps Quickly</h1>
-			<p class="get-smaller">Start building insightful visualizations for your audience.</p>
-		</header>
 		<div class="row">
-			<div class="col-lg-12 med-margin-bottom">
+			<div class="col-lg-6">
+				<header class="section-header home text-left underline underline-left">
+					<h1 class="headline text-large hairline text-left">Create Beautiful Roadmaps Quickly</h1>
+					<p class="get-smaller">Start building insightful visualizations for your audience.</p>
+				</header>
+			</div>
+			<div class="col-lg-6 text-center">
+				<img src="/images/macbook-header.png" width="500px">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12 small-margin-top small-margin-bottom">
 				<a href="https://app.roadmunk.com/login/#/signup">
 					<div class="cta center"></div>
 				</a>
@@ -16,80 +23,101 @@
 	</div>
 </section>
 <article>
-	<section class="section black-white section-short has-top">
-		<div class="decor-top">
+	<section class="section white section-short has-top">
+		<!--<div class="decor-top">
 			<% include top-triangle-angle %>
-		</div>
+		</div>-->
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
 			<header class="section-header small text-center underline">
 				<h1 class="headline text-large hairline xsmall-margin-bottom">How It Works</h1>
 			</header>
-			<div class="row med-margin-bottom">
+			<div class="row">
 				<div class="col-md-12 text-default">
 					<ul class="list-unstyled row image-list">
 						<li class="col-md-4">
-							<img src="/images/icon-cogs.png" width="200" height="200">
-							<h3 class="text-center font-normal">Create your product roadmap in minutes</h3>
+							<img src="/images/icon-clock-cogs.png" width="200" height="200">
+							<div class="col-md-10 center">
+								<h3 class="text-center font-normal">Create your product roadmap in minutes</h3>
+							</div>
 						</li>
 						<li class="col-md-4">
-							<img src="/images/icon-composer.png" width="200" height="200">
-							<h3 class="text-center font-normal">Colorize And Stylize To Match Your Brand</h3>
+							<img class="home-svg" src="/images/pencils.svg" width="150" height="150">
+							<div class="col-md-10 center">
+								<h3 class="text-center font-normal">Colorize And Stylize To Match Your Brand</h3>
+							</div>
 						</li>
 						<li class="col-md-4">
-							<!-- roadmap1 is better proportioned but 2 looks better? -->
 							<img src="/images/icon-imac-roadmap2.png" width="200" height="200">
-							<h3 class="text-center font-normal">Download Your Presentation Ready Roadmap</h3>
+							<div class="col-md-12 center">
+								<h3 class="text-center font-normal">Download Your Presentation Ready Roadmap</h3>
+							</div>
 						</li>
 					</ul>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-md-10 small-margin-top xsmall-margin-bottom center">
+					<a href="https://app.roadmunk.com/login/#/signup">
+						<div class="cta center"></div>
+					</a>
+				</div>
+			</div>
 		</div>
 	</section>
-	<section class="section white-black section-short has-top">
-		<div class="decor-top">
-			<% include top-triangle-angle %>
-		</div>
+	<section class="section grey section-short has-top">
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
-		<div class="container features">
+		<div class="container-fluid features">
 			<header class="section-header small text-center underline">
 				<h1 class="headline text-large hairline xsmall-margin-bottom">Features</h1>
 			</header>
-			<div class="row med-margin-bottom">
-				<div class="col-md-12 text-default">
+			<div class="row">
+				<div class="col-md-10 center">
 					<ul class="list-unstyled row image-list">
 						<li class="col-md-3 small-margin-top">
 						<!-- a that goes to feature -->
-							<img src="/images/icon-briefcase-full.png" width="295" height="295">
+							<img src="/images/binder.svg" width="295" height="295">
 							<h3 class="text-center font-normal">Idea Management</h3>
-							<p>Import, create and priortize items in a slick UI.</p>
+							<div class="col-sm-10 center">
+								<p class="callout">Import, create and priortize items in a slick UI.</p>
+							</div>
 						</li>
 						<li class="col-md-3 small-margin-top">
-							<img src="/images/icon-camera.png" width="295" height="295">
+							<img src="/images/microscope.svg" width="295" height="295">
 							<h3 class="text-center font-normal">Custom Roadmap Views</h3>
-							<p>Single click creation and powerful drag and drop tools.</p>
+							<div class="col-sm-10 center">
+								<p class="callout">Single click creation and powerful drag and drop tools.</p>
+							</div>
 						</li>
 						<li class="col-md-3 small-margin-top">
-							<img src="/images/icon-apple.png" width="295" height="295">
+							<img src="/images/utensils.svg" width="295" height="295">
 							<h3 class="text-center font-normal">Color Palettes &#38; Branding</h3>
-							<p>Create the deep impact on your audience.</p>
+							<div class="col-sm-10 center">
+								<p class="callout">Create the deep impact on your audience.</p>
+							</div>
 						</li>
 						<li class="col-md-3 small-margin-top">
-							<img src="/images/icon-disk.png" width="295" height="295">
+							<img src="/images/bullet.svg" width="295" height="295">
 							<h3 class="text-center font-normal">Fit to Powerpoint</h3>
-							<p>Stop moving pixels arounds a slide. Export directly to Powerpoint.</p>
+							<div class="col-sm-10 center">
+								<p class="callout">Stop moving pixels arounds a slide. Export directly to Powerpoint.</p>
+							</div>
 						</li>
 					</ul>
 				</div>
+				<div class="row">
+				<div class="col-md-10 small-margin-top xsmall-margin-bottom center">
+					<a href="https://app.roadmunk.com/login/#/signup">
+						<div class="cta learn-more center"></div>
+					</a>
+				</div>
+			</div>
 			</div>
 		</div>
 	</section>
-	<section class="section black-white section-normal has-top">
-		<div class="decor-top">
-			<% include top-triangle-angle %>
-		</div>
+	<section class="section white section-normal has-top">
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container-fluid">
@@ -117,7 +145,7 @@
 									</div>
 									<span class="info">
 										<h3>Sprint Roadmap</h3>
-										<p>Create your short term roadmap to visualize your upcoming sprints</p>
+										<p class="callout">Create your short term roadmap to visualize your upcoming sprints</p>
 									</span>
 								</a>
 							</li>
@@ -128,7 +156,7 @@
 									</div>
 									<span class="info">
 										<h3>Product Roadmap</h3>
-										<p>Provide vital status updates to your stakeholders</p>
+										<p class="callout">Provide vital status updates to your stakeholders</p>
 									</span>
 								</a>
 							</li>
@@ -139,19 +167,19 @@
 									</div>
 									<span class="info">
 										<h3>Release Roadmap</h3>
-										<p>Plan out your long term releases across multiple product lines</p>
+										<p class="callout">Plan out your long term releases across multiple product lines</p>
 									</span>
 								</span>
 							</li>
 						</ul>
+						<div class="row">
+							<div class="col-md-10 xsmall-margin-top small-margin-bottom center">
+								<a href="https://app.roadmunk.com/login/#/signup">
+									<div class="cta small-cta center"></div>
+								</a>
+							</div>
+						</div>
 					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-10 small-margin-top small-margin-bottom center">
-					<a href="https://app.roadmunk.com/login/#/signup">
-						<div class="cta center"></div>
-					</a>
 				</div>
 			</div>
 		</div>
@@ -186,10 +214,7 @@
 			</div>
 		</div>
 	</section>-->
-	<section class="section white-black section-normal has-top">
-		<div class="decor-top">
-			<% include top-triangle-angle %>
-		</div>
+	<!--<section class="section grey section-normal has-top">
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
@@ -245,11 +270,8 @@
 				</div>
 			</blockquote>
 		</div>
-	</section>
-	<section class="section black-white section-normal has-top">
-		<div class="decor-top">
-			<% include top-triangle-angle %>
-		</div>
+	</section>-->
+	<section class="section grey section-normal has-top">
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
