--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -11,5 +11,5 @@
 <%if (content == "features") { %>
 	<script src="/javascripts/features.js"></script>
 <% } else if (content = "home") { %>
-	<script src="/javascripts/home.js"></script>
+	<!--<script src="/javascripts/home.js"></script>-->
 <% } %>
