--- a/views/termsandconditions.ejs
+++ b/views/termsandconditions.ejs
@@ -1,5 +1,5 @@
 <article>
-	<section class="section white-black section-large top-header has-top">
+	<section class="section blue section-large top-header has-top">
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
@@ -17,7 +17,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="section black-white section-normal has-top">
+	<section class="section white section-normal has-top">
 		<div class="decor-top">
 			<% include top-triangle-angle %>
 		</div>
