--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -31,6 +31,18 @@
     .section-fill(@steel-darkest, @roadmunk-orange);
   }
 
+  &.blue {
+    .section-fill(@table-blue, @light-font);
+  }
+
+  &.grey {
+    .section-fill(#eef1f2, @steel-darkest);
+  }
+
+  &.white {
+    .section-fill(#fff, @steel-darkest);
+  }
+
   &.section-short {
     padding: 60px 0;
     &.top-header {
@@ -68,6 +80,10 @@
     padding: 160px 0;
   }
 
+  .home-svg {
+    margin-top: 50px;
+  }
+
   [class*="container"] {
     z-index : 3;
     .section-header {
@@ -78,6 +94,9 @@
       margin         : 0 auto 80px;
       z-index        : 3;
       font-size      : 18px;
+      &.home {
+        //margin-top: 50px;
+      }
       &.small {
         margin: 0 auto 15px;
       }
@@ -138,8 +157,15 @@
       li {
         margin-bottom: 10%;
         opacity: 0.4;
+        .transition(opacity 0.2s);
 
         &.selected {
+          .transition(opacity 0.2s);
+          opacity: 1;
+        }
+
+        &:hover {
+          .transition(opacity 0.2s);
           opacity: 1;
         }
 
@@ -391,3 +417,41 @@
 .section.has-bottom:not(.has-top):nth-child(15) {
     z-index: 5;
 }*/
+
+@media only screen and (max-width: 1400px) {
+  .section {
+    [class*="container"] {
+      .feature-controls {
+          margin-top: 10%;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .feature-controls {
+      margin-top: 25%
+  }
+  .section {
+    &.section-normal {
+      padding: 50px 0;
+    }
+    &.section-short {
+      padding: 30px 0;
+    }
+    .home-svg {
+      margin-top: 0;
+    }
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .section {
+    &.section-normal {
+      padding: 25px 0;
+    }
+    &.section-short {
+      padding: 15px 0;
+    }
+  }
+}
