--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,4 +1,4 @@
-<section class="section white-black section-short extra-top-header">
+<section class="section blue section-short extra-top-header">
 	<div class="background-media"></div>
 	<div class="background-overlay"></div>
 	<div class="container">
@@ -9,7 +9,7 @@
 	</div>
 </section>
 <article>
-	<section class="section black-white section-normal has-top">
+	<section class="section white section-normal has-top">
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
