--- a/views/features.ejs
+++ b/views/features.ejs
@@ -1,10 +1,10 @@
 <article>
-	<section class="section black-white section-large top-header has-top">
+	<section class="section blue section-large top-header has-top">
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
-			<header class="small-header text-left">
-				<h1 class="headline text-small hairline">Pick Your Roadmap View</h1>
+			<header class="section-header text-center underline">
+				<h1 class="headline text-medium hairline xsmall-margin-bottom">Pick Your Roadmap View</h1>
 			</header>
 			<div class="row">
 				<div class="col-lg-12 image-row">
@@ -19,10 +19,10 @@
 			</div>
 		</div>
 	</section>
-	<section class="section white-black section-normal has-top">
-		<div class="decor-top">
-			<% include top-triangle-angle %>
-		</div>
+	<section class="section white section-normal has-top">
+		<!--<div class="decor-top">
+			<% include bottom-triangle-angle %>
+		</div>-->
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
@@ -39,10 +39,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="section black-white section-normal has-top">
-		<!--<div class="decor-top">
-			<% include top-triangle-angle %>
-		</div>-->
+	<section class="section grey section-normal has-top">
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
@@ -59,10 +56,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="section white-black section-normal has-top">
-		<div class="decor-top">
-			<% include top-triangle-angle %>
-		</div>
+	<section class="section white section-normal has-top">
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
@@ -79,10 +73,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="section black-white section-normal has-top">
-		<!--<div class="decor-top">
-			<% include top-triangle-angle %>
-		</div>-->
+	<section class="section grey section-normal has-top">
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
@@ -99,10 +90,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="section white-black section-normal has-top">
-		<div class="decor-top">
-			<% include top-triangle-angle %>
-		</div>
+	<section class="section white section-normal has-top">
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
@@ -119,10 +107,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="section black-white section-normal has-top">
-		<!--<div class="decor-top">
-			<% include top-triangle-angle %>
-		</div>-->
+	<section class="section grey section-normal has-top">
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
