--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-        <img src="/images/logo.png" height="35px">
+        <img src="/images/logo_white.png" height="35px">
       </a>
     </div>
 
