--- a/views/privacypolicy.ejs
+++ b/views/privacypolicy.ejs
@@ -1,6 +1,6 @@
 <div class="privacy">
 	<article>
-		<section class="section white-black section-large top-header has-top">
+		<section class="section blue section-large top-header has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
@@ -18,7 +18,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section black-white section-normal has-top">
+		<section class="section white section-normal has-top">
 			<div class="decor-top">
 				<% include top-triangle-angle %>
 			</div>
