--- a/public/stylesheets/blogPost.less
+++ b/public/stylesheets/blogPost.less
@@ -55,6 +55,11 @@
 			font-weight: 400;
 		}
 	}
+	.disqus {
+		iframe {
+			margin-top: 50px;
+		}
+	}
 }
 
 @media screen and (max-width: 1024px) { /* Specific to this particular image */
