--- a/public/stylesheets/global.less
+++ b/public/stylesheets/global.less
@@ -54,6 +54,10 @@ p.callout {
     line-height: 1;
 }
 
+.normal {
+    font-weight: 400 !important;
+}
+
 .thin {
     font-weight: 300 !important;
 }
