--- a/views/features.ejs
+++ b/views/features.ejs
@@ -1,20 +1,26 @@
 <article>
-	<section class="section blue section-large top-header has-top">
+	<section class="section blue section-short top-header has-top">
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
-		<div class="container">
-			<header class="section-header text-center underline">
+		<div class="container-fluid">
+			<header class="section-header small text-center underline">
 				<h1 class="headline text-medium hairline xsmall-margin-bottom">Pick Your Roadmap View</h1>
 			</header>
 			<div class="row">
-				<div class="col-lg-12 image-row">
-					<img src="/images/timeline.png">
-					<img src="/images/swimlane.png">
+				<div class="col-lg-8 image-row center">
+					<div class="col-lg-6 text-center">
+						<h3 class="text-small thin xsmall-margin-bottom">Timeline</h3>
+						<img src="/images/timeline.png">
+					</div>
+					<div class="col-lg-6 text-center">
+						<h3 class="text-small thin xsmall-margin-bottom">Swimlane</h3>
+						<img src="/images/swimlane.png">
+					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-6 center text-center subheader">
-					<p>Create your roadmap view in minutes. Using our simple drag and drop tools, add and prioritize items, organize headers, and pivot data by custom fields.</p>
+			<div class="row small-margin-top">
+				<div class="col-md-5 center text-center subheader">
+					<h4 class="normal">Create your roadmap in just a few minutes. Using our drag and drop tools, you can add and organize items from any view, organize headers and apply custom layout options.</h4>
 				</div>
 			</div>
 		</div>
@@ -27,14 +33,16 @@
 		<div class="background-overlay"></div>
 		<div class="container">
 			<div class="row">
-				<div id="feature_1_text" class="col-md-4 transparent">
-					<header class="small-header text-left">
-						<h1 class="headline text-small hairline">Designer Colors</h1>
-						<p class="body-subheader">Colorize your roadmap from our selection of palettes or create your own palette to match your brand to give the deepest impact to your audience. </p>
-					</header>
-				</div>
-				<div id="feature_1_img" class="col-md-6 right image-right transparent">
-					<img src="/images/designer-colors.png">
+				<div class="col-md-10 center">
+					<div id="feature_1_text" class="col-md-5 transparent">
+						<header class="small-header text-left">
+							<h1 class="headline text-small hairline">Color Palettes and Branding</h1>
+							<p class="body-subheader">Create stunning visualizations by applying designer or newly created palettes to your roadmap and give the deepest impact to your audience.</p>
+						</header>
+					</div>
+					<div id="feature_1_img" class="col-md-6 right text-right transparent">
+						<img src="/images/designer-colors.png">
+					</div>
 				</div>
 			</div>
 		</div>
@@ -44,14 +52,16 @@
 		<div class="background-overlay"></div>
 		<div class="container">
 			<div class="row">
-				<div id="feature_2_img" class="col-md-6 image-left transparent">
-					<img src="http://placehold.it/500x300">
-				</div>
-				<div id="feature_2_text" class="col-md-4 right transparent">
-					<header class="small-header text-left">
-						<h1 class="headline text-small hairline">Fit To Powerpoint &#38; Legal</h1>
-						<p class="body-subheader">Choose what aspect ratio and resolution you require for that upcoming presentation. Then download your roadmap in either PNG or HTML.</p>
-					</header>
+				<div class="col-md-10 center">
+					<div id="feature_2_img" class="col-md-6 text-left transparent">
+						<img src="http://placehold.it/500x300">
+					</div>
+					<div id="feature_2_text" class="col-md-5 right transparent">
+						<header class="small-header text-left">
+							<h1 class="headline text-small hairline">Fit To Powerpoint</h1>
+							<p class="body-subheader">There is no need to move pixels on slides with our direct export to presentation formats. Select your aspect ratio (4:3, 16:9, 16:10) and download your roadmap in a presentation ready format (PPT, PNG, PDF, HTML).</p>
+						</header>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -61,14 +71,16 @@
 		<div class="background-overlay"></div>
 		<div class="container">
 			<div class="row">
-				<div id="feature_3_text" class="col-md-4 transparent">
-					<header class="small-header text-left">
-						<h1 class="headline text-small hairline">Share Your Roadmap As A URL</h1>
-						<p class="body-subheader">Share a roadmap view as URL so that your stakeholders can stay up to date and drill down on information relavent to them.</p>
-					</header>
-				</div>
-				<div id="feature_3_img" class="col-md-6 right image-right transparent">
-					<img src="http://placehold.it/500x300">
+				<div class="col-md-10 center">
+					<div id="feature_3_text" class="col-md-5 transparent">
+						<header class="small-header text-left">
+							<h1 class="headline text-small hairline">Share your Roadmap as a URL</h1>
+							<p class="body-subheader">Let your audience get the latest status and details by interacting with an HTML version of the roadmap view published as a private URL.</p>
+						</header>
+					</div>
+					<div id="feature_3_img" class="col-md-6 right text-right transparent">
+						<img src="http://placehold.it/500x300">
+					</div>
 				</div>
 			</div>
 		</div>
@@ -78,14 +90,16 @@
 		<div class="background-overlay"></div>
 		<div class="container">
 			<div class="row">
-				<div id="feature_4_img" class="col-md-6 image-left transparent">
-					<img src="/images/unlimited-views.png">
-				</div>
-				<div id="feature_4_text" class="col-md-4 right transparent">
-					<header class="small-header text-left">
-						<h1 class="headline text-small hairline">One Data Set, Unlimited Views</h1>
-						<p class="body-subheader">From a single set of data, create multiple roadmap views to be shared with different audiences</p>
-					</header>
+				<div class="col-md-10 center">
+					<div id="feature_4_img" class="col-md-6 text-left transparent">
+						<img src="/images/unlimited-views.png">
+					</div>
+					<div id="feature_4_text" class="col-md-5 right transparent">
+						<header class="small-header text-left">
+							<h1 class="headline text-small hairline">One Data Set, Unlimited Views</h1>
+							<p class="body-subheader">We understand that audiences like sales, engineering and executives need different degrees of granularity and information. By creating additional views, showcase the content thats relevant for a specific audience, all from the same data set. </p>
+						</header>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -95,14 +109,16 @@
 		<div class="background-overlay"></div>
 		<div class="container">
 			<div class="row">
-				<div id="feature_5_text" class="col-md-4 transparent">
-					<header class="small-header text-left">
-						<h1 class="headline text-small hairline">Share Your Roadmap As A URL</h1>
-						<p class="body-subheader">Share roadmap views with a simple URL so that...add and prioritize items, organize headers, and pivot data by custom fields.</p>
-					</header>
-				</div>
-				<div id="feature_5_img" class="col-md-6 right image-right transparent">
-					<img src="http://placehold.it/500x300">
+				<div class="col-md-10 center">
+					<div id="feature_5_text" class="col-md-5 transparent">
+						<header class="small-header text-left">
+							<h1 class="headline text-small hairline">Print to A4 &#38; Legal</h1>
+							<p class="body-subheader">Let us help you prepare for those important roadmap meetings by creating printer friendly versions of your roadmap. </p>
+						</header>
+					</div>
+					<div id="feature_5_img" class="col-md-6 right text-right transparent">
+						<img src="http://placehold.it/500x300">
+					</div>
 				</div>
 			</div>
 		</div>
@@ -112,14 +128,16 @@
 		<div class="background-overlay"></div>
 		<div class="container">
 			<div class="row">
-				<div id="feature_6_img" class="col-md-6 image-left transparent">
-					<img src="/images/table.png">
-				</div>
-				<div id="feature_6_text" class="col-md-4 right transparent">
-					<header class="small-header text-left">
-						<h1 class="headline text-small hairline">Manage Your Table Of Data</h1>
-						<p class="body-subheader">Create, import and organize your roadmap items in a sleek table view. Add custom columns, manipulate data, all in the cloud</p>
-					</header>
+				<div class="col-md-10 center">
+					<div id="feature_6_img" class="col-md-6 text-left transparent">
+						<img src="/images/table.png">
+					</div>
+					<div id="feature_6_text" class="col-md-5 right transparent">
+						<header class="small-header text-left">
+							<h1 class="headline text-small hairline">Idea Management</h1>
+							<p class="body-subheader">Create or import roadmap items directly into your table view. Quickly sort, filter, and prioritize roadmap items using the fastest and sleekest new UI technologies.</p>
+						</header>
+					</div>
 				</div>
 			</div>
 		</div>
