--- a/views/blog/blog1.ejs
+++ b/views/blog/blog1.ejs
@@ -55,6 +55,7 @@
 								<p class="bio"><%= author.bio %></p>
 							</div>
 						</div>
+						<% include disqus-script %>
 					</div>
 				</div>
 			</div>
